# auth-example-rust-axum

./: .env.default  .gitignore  Cargo.toml  Dockerfile  README.md  compose-dev.yml
config/: scylla.yaml
migrations/: 20240619193803_users.down.sql  20240619193803_users.up.sql  20240630110107_projects.down.sql  20240630110107_projects.up.sql
public/uploads/profiles/: d1898ed1-763c-4bef-89e3-4f98391f8ebb.html
scylla/: cassandra-rackdc.properties  scylla.yaml
src/: app.rs  main.rs  state.rs  swagger.rs
src/config/: cors.rs  env.rs  mod.rs  tracing.rs
src/db/: mod.rs  postgres.rs  scylla.rs
src/web/: error.rs  extractors.rs  guard.rs  mod.rs  permissions.rs
src/web/auth/: controller.rs  dto.rs  jwt.rs  mod.rs  model.rs  routes.rs  service.rs  utils.rs
src/web/profile/: controller.rs  dto.rs  mod.rs  respository.rs  routes.rs  service.rs
src/web/projects/: controller.rs  dto.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs  utils.rs
src/web/stats/: controller.rs  dto.rs  mod.rs  repository.rs  routes.rs  service.rs
src/web/users/: controller.rs  dto.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs  test.rs  utils.rs
