[package]
name = "idk"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
dotenv = "0.15.0"
envy = "0.4.2"
scylla = "0.13.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utoipa = { version = "4.2.3", features = ["uuid"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
utoipauto = "0.1.11"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
