[package]
name = "idk"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header", "multipart"] }
axum-test = "15.2.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
envy = "0.4.2"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-native-tls",
    "chrono",
    "uuid",
    "postgres",
] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utoipa = { version = "4.2.3", features = ["uuid", "chrono", "axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
utoipauto = "0.1.11"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
validator = { version = "0.18.1", features = ["derive"] }
